--- a/less/honey.less
+++ b/less/honey.less
@@ -56,7 +56,7 @@ img {
     display: block;
 }
 body {
-    text-align: center;
+    //text-align: center;
     font: 12px/1.5 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 }
 a {
