--- a/css/honey.css
+++ b/css/honey.css
@@ -8,7 +8,7 @@ input[type="text"],textarea{-webkit-appearance:none;}
 textarea{overflow:auto;resize:none;}
 h1,h2,h3,h4,h5,h6,input,textarea,select,button{font-size:100%;}
 img{display:block;}
-body{text-align:center;font:12px/1.5 'Helvetica Neue',Helvetica,Arial,Sans-serif;}
+body{font:12px/1.5 'Helvetica Neue',Helvetica,Arial,Sans-serif;}
 a{color:#093D72;text-decoration:none;}a:hover{text-decoration:underline;}
 .clearfix{*zoom:1;}.clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0;}
 .hide-text{text-indent:-1000px;overflow:hidden;}
