--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -79,16 +79,16 @@
                 color: #444;
                 padding: 3px;
                 margin-top: 0;
-                margin-bottom: 0;
-                &.mb15 {
-                    margin-bottom: 15px;
-                }
+                margin-bottom: 15px;
+                //&.mb15 {
+                //    margin-bottom: 15px;
+                //}
                 small {
                     float: right;
                     color: #999;
                 }
                 p {
-                    padding: 10px;
+                    padding: 5px 10px;
                     font-size: 14px;
                 }
                 span {
