--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -55,6 +55,13 @@
             }
             .actions {
                 text-align: right;
+                a {
+                    margin-left: 20px;
+                    strong {
+                        color: #cc3216;
+                        font-weight: 200;
+                    }
+                }
             }
             .arrow {
                 position: absolute;
