--- a/less/honey.less
+++ b/less/honey.less
@@ -40,9 +40,9 @@ input:focus, textarea:focus, select:focus {
     color: #444 !important; 
 }
 /* 去掉iphone访问的一些默认样式 */
-input[type="text"], textarea {
-    -webkit-appearance: none;
-}
+//input[type="text"], textarea {
+//    -webkit-appearance: none;
+//}
 /* 禁止textarea输入框用户缩放 */
 textarea {
     overflow: auto;
