--- a/css/widget/comment.css
+++ b/css/widget/comment.css
@@ -4,7 +4,6 @@ table{border-collapse:collapse;border-spacing:0;}
 fieldset,img{border:0;}
 ol,ul{list-style:none;}
 input:focus,textarea:focus,select:focus{outline:none;color:#444 !important;}
-input[type="text"],textarea{-webkit-appearance:none;}
 textarea{overflow:auto;resize:none;}
 h1,h2,h3,h4,h5,h6,input,textarea,select,button{font-size:100%;}
 img{display:block;}
@@ -87,8 +86,8 @@ a{color:#093D72;text-decoration:none;}a:hover{text-decoration:underline;}
 #honey-comment ul.honey-comment-list .honey-comment-body .origin-contents span{color:#999;display:block;font-size:12px;margin-bottom:5px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .origin-content p{margin:0;}
 #honey-comment ul.honey-comment-list .honey-comment-body .origin-content .arrow{left:10px;}
-#honey-comment ul.honey-comment-list .honey-comment-body .reply{padding:0;}#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input>input{border:0;border-right:1px solid #dfe1e1;padding:10px;display:inline-block;}
-#honey-comment ul.honey-comment-list .honey-comment-body .reply table,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input>input{width:100%;}
+#honey-comment ul.honey-comment-list .honey-comment-body .reply{padding:0;}#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input input{border:0;border-right:1px solid #dfe1e1;padding:10px;display:inline-block;}
+#honey-comment ul.honey-comment-list .honey-comment-body .reply table,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input input{width:100%;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-login{padding:10px;}#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-login span{margin:0 10px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-login input{margin-right:10px;padding:3px;width:80px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .arrow{right:10px;}
@@ -97,8 +96,12 @@ a{color:#093D72;text-decoration:none;}a:hover{text-decoration:underline;}
 #honey-comment .honey-comment-text{margin-top:30px;}#honey-comment .honey-comment-text h5{font-size:14px;font-weight:200;}#honey-comment .honey-comment-text h5 img{display:inline-block;vertical-align:middle;margin-right:15px;}
 #honey-comment .honey-comment-text h5 span{color:#999;margin:0 10px;}
 #honey-comment .honey-comment-text .comment-input{border:1px solid #dfe1e1;margin-top:20px;position:relative;}#honey-comment .honey-comment-text .comment-input h4{height:70px;line-height:70px;background-color:#f6f6f6;padding:0 20px;font-size:14px;border-bottom:1px solid #dfe1e1;overflow:hidden;}
-#honey-comment .honey-comment-text .comment-input .textarea{padding:10px;}
-#honey-comment .honey-comment-text .comment-input textarea{height:90px;width:100%;border:0;}
+#honey-comment .honey-comment-text .comment-input .textarea{padding:10px;position:relative;}
+#honey-comment .honey-comment-text .comment-input .notice{background-color:#cb4b4b;color:#fff;font-size:12px;text-align:center;line-height:80px;position:absolute;left:0;top:10px;width:100%;display:none;}#honey-comment .honey-comment-text .comment-input .notice i{background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat;height:21px;width:21px;display:inline-block;vertical-align:text-bottom;overflow:hidden;margin-right:5px;}
+#honey-comment .honey-comment-text .comment-input .notice.success,#honey-comment .honey-comment-text .comment-input .notice.error{background-color:#fff;color:#222;font-size:20px;}
+#honey-comment .honey-comment-text .comment-input .notice.success i{background-position:-99px -81px;}
+#honey-comment .honey-comment-text .comment-input .notice.error i{background-position:-99px -51px;}
+#honey-comment .honey-comment-text .comment-input .notice,#honey-comment .honey-comment-text .comment-input textarea{height:90px;width:100%;border:0;}
 #honey-comment .honey-comment-text .comment-input p{font-size:12px;color:#999;margin:0;padding:20px;border-bottom:1px solid #dfe1e1;background-color:#f6f6f6;}#honey-comment .honey-comment-text .comment-input p input{margin-right:10px;padding:3px;width:100px;}
 #honey-comment .honey-comment-text .actions{margin-top:15px;color:#999;}
 #honey-comment .selected,#honey-comment .emo-small-1,#honey-comment .emo-small-2,#honey-comment .emo-small-3,#honey-comment .emo-small-4,#honey-comment .emo-small-5,#honey-comment .emo-1,#honey-comment .emo-2,#honey-comment .emo-3,#honey-comment .emo-4,#honey-comment .emo-5{position:absolute;background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat 0 0;width:40px;height:40px;overflow:hidden;top:15px;cursor:pointer;}
