--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -187,8 +187,8 @@
                 position: relative;
             }
             .notice {
-                background-color: #cb4b4b;
-                color: #fff;
+                //background-color: #cb4b4b;
+                //color: #fff;
                 font-size: 12px;
                 text-align: center;
                 line-height: 80px;
