comment reply notice

--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -115,6 +115,22 @@
             }
             .reply {
                 padding: 0;
+                .reply-input {
+                    position: relative;
+                    .notice {
+                        position: absolute;
+                        //background-color: #cb4b4b;
+                        //color: #fff;
+                        width: 100%;
+                        left: 0;
+                        top: 1px;
+                        height: 34px;
+                        display: none;
+                        text-align: center;
+                        line-height: 34px;
+                    }
+                }
+                
                 .reply-input input {
                     border: 0; 
                     border-right: 1px solid #dfe1e1;
