--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -189,7 +189,7 @@
             border: 1px solid #dfe1e1; 
             margin-top: 20px;
             position: relative;
-            h4 {
+            h5, h4 {
                 height: 70px;
                 line-height: 70px;
                 background-color: #f6f6f6; 
