--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -129,13 +129,15 @@
                         text-align: center;
                         line-height: 34px;
                     }
-                }
-                
-                .reply-input input {
-                    border: 0; 
-                    border-right: 1px solid #dfe1e1;
-                    padding: 10px;
-                    display: inline-block;
+                    p {
+                        padding: 10px;    
+                    }
+                    input {
+                        border: 0; 
+                        border-right: 1px solid #dfe1e1;
+                        padding: 10px;
+                        display: inline-block;
+                    }
                 }
                 
                 table, .reply-input input {
