--- a/css/widget/comment.css
+++ b/css/widget/comment.css
@@ -87,6 +87,7 @@ a{color:#093D72;text-decoration:none;}a:hover{text-decoration:underline;}
 #honey-comment ul.honey-comment-list .honey-comment-body .origin-content p{margin:0;}
 #honey-comment ul.honey-comment-list .honey-comment-body .origin-content .arrow{left:10px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply{padding:0;}#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input{position:relative;}#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input .notice{position:absolute;width:100%;left:0;top:1px;height:34px;display:none;text-align:center;line-height:34px;}
+#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input p{padding:10px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input input{border:0;border-right:1px solid #dfe1e1;padding:10px;display:inline-block;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply table,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-input input{width:100%;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-login{padding:10px;}#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-login span{margin:0 10px;}
