remove honeycss from widget

--- a/less/honey.less
+++ b/less/honey.less
@@ -6,9 +6,9 @@
  *update-time: 2012-05-14;
  **/
 /* 图片文件夹路径 */
-@base-url: "honey.hunantv.com/i/image/";
-@public-url: "honey.hunantv.com/img/";
 /* 防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体 */
+@import "./config.less";
+
 html {
     color: #444;
     background: #F1F1F1;
