--- a/less/widget/login.dialog.ie.less
+++ b/less/widget/login.dialog.ie.less
@@ -7,3 +7,10 @@
         height: 26px !important;
     }
 }
+
+.actions p {
+    padding-bottom: 6px;
+    &.noborder {
+        padding-bottom: 0;
+    }
+}
