--- a/css/widget/login.dialog.css
+++ b/css/widget/login.dialog.css
@@ -15,10 +15,15 @@
 .mod-dialog .dialog-wrap .tuijian li.tuijian-select{background:url("//honey.hunantv.com/i/image/icon/tuijian-ico.png") no-repeat 172px 58px #f1f5e9;border:1px solid #D5E2BE;}
 .mod-dialog .dialog-wrap .tuijian-quxiao{top:10px;right:220px;}
 .mod-dialog .h10{margin:0;padding:0;overflow:hidden;}
-.mod-dialog .honey-login-input{width:290px;margin-bottom:15px;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;height:27px;padding:4px 6px;font-size:14px;line-height:27px;color:gray;border:1px solid #ddd;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-webkit-transition:border linear .2s, box-shadow linear .2s;-moz-transition:border linear .2s, box-shadow linear .2s;-o-transition:border linear .2s, box-shadow linear .2s;transition:border linear .2s, box-shadow linear .2s;}.mod-dialog .honey-login-input:-moz-placeholder{color:#bfbfbf;}
+.mod-dialog .honey-login-input{width:290px;margin-bottom:15px;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;height:27px;padding:3px 6px;font-size:14px;line-height:27px;color:gray;border:1px solid #ddd;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-webkit-transition:border linear .2s, box-shadow linear .2s;-moz-transition:border linear .2s, box-shadow linear .2s;-o-transition:border linear .2s, box-shadow linear .2s;transition:border linear .2s, box-shadow linear .2s;}.mod-dialog .honey-login-input:-moz-placeholder{color:#bfbfbf;}
 .mod-dialog .honey-login-input:-ms-input-placeholder{color:#bfbfbf;}
 .mod-dialog .honey-login-input::-webkit-input-placeholder{color:#bfbfbf;}
 .mod-dialog .honey-login-submit{background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat 0 -120px;width:90px;height:32px;border:0;overflow:hidden;color:#fff;font-weight:200px;line-height:32px;cursor:pointer;}
 .mod-dialog .actions{text-align:left;padding:0 8px;margin:0;position:relative;color:#999;}.mod-dialog .actions .set-cookies{padding:5px 20px;display:inline-block;}.mod-dialog .actions .set-cookies input{margin-right:3px;}
 .mod-dialog .actions .forget-pass{position:absolute;right:0;top:9px;}
-.mod-dialog .actions p{clear:both;margin:0;display:block;border:none;border:0;border-top:1px solid #ddd;margin-top:20px;padding-top:10px;}
+.mod-dialog .actions p{clear:both;margin:0;display:block;border:none;border:0;border-top:1px solid #ddd;margin-top:20px;padding-top:10px;}.mod-dialog .actions p.noborder{border-top:none;margin-top:10px;margin-bottom:10px;}
+.mod-dialog .actions p span{display:block;padding:0;margin:0;margin-bottom:11px;}
+.mod-dialog .actions p a{margin-right:20px;}
+.mod-dialog .actions i{display:inline-block;width:16px;height:16px;overflow:hidden;background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat 0 0;margin-right:5px;}.mod-dialog .actions i.sina{background-position:-62px -237px;}
+.mod-dialog .actions i.qq{background-position:-45px -237px;}
+.mod-dialog .actions i.tqq{background-position:-46px -254px;}
