--- a/css/widget/login.dialog.ie.css
+++ b/css/widget/login.dialog.ie.css
@@ -1,2 +1,3 @@
 .mod-dialog .h10{height:8px !important;}
 .mod-dialog .honey-login-input{height:26px !important;}
+.actions p{padding-bottom:6px;}.actions p.noborder{padding-bottom:0;}
