--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -192,6 +192,9 @@
             border: 1px solid #dfe1e1; 
             margin-top: 20px;
             position: relative;
+            h5 {
+                font-size: 12px;
+            }
             h5, h4 {
                 height: 70px;
                 line-height: 70px;
