--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -192,17 +192,17 @@
             border: 1px solid #dfe1e1; 
             margin-top: 20px;
             position: relative;
-            h5 {
-                font-size: 12px;
-            }
             h5, h4 {
                 height: 70px;
                 line-height: 70px;
                 background-color: #f6f6f6; 
                 padding: 0 20px;
-                font-size: 14px;
+                //font-size: 14px;
                 border-bottom: 1px solid #dfe1e1; 
                 overflow: hidden;
+            }
+            h5 {
+                font-size: 12px;
             }
             .textarea {
                 padding: 10px;
