--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -1,13 +1,12 @@
 @import "../honey.less";
 @import "../lib/css3.less";
 
-
-
 #honey-comment { 
     
     h3 {
         font-size: 18px;
         font-weight: 600;
+        padding:0 10px;
         span {
             font-size: 12px;
             color: gray;
@@ -20,7 +19,7 @@
 
     ul.honey-comment-list {
         margin-top: 20px; 
-
+        padding:0 10px;
         li {
             border-bottom: 1px dotted #E1E1E1;
             overflow: hidden;
@@ -173,9 +172,14 @@
             }
         }
     }
-
+    .bluebox-style{
+        border-top:1px solid #c7dae2;
+        border-bottom:4px solid #c7dae2;
+        background-color:#f3f8fe; 
+    }
     .honey-comment-text {
         margin-top: 30px;
+        padding:0 10px;
         h5 {
             font-size: 12px;
             font-weight: 200;
