--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -20,6 +20,10 @@
     ul.honey-comment-list {
         margin-top: 20px; 
         padding:0 10px;
+        h3 {
+            font-size: 16px;
+            margin: 0;
+        }
         li {
             border-bottom: 1px dotted #E1E1E1;
             overflow: hidden;
