--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -175,7 +175,10 @@
     .bluebox-style{
         border-top:1px solid #c7dae2;
         border-bottom:4px solid #c7dae2;
-        background-color:#f3f8fe; 
+        background-color:#f3f8fe;
+        h4{
+            font-size:18px;
+        }
     }
     .honey-comment-text {
         margin-top: 30px;
