--- a/css/widget/comment.css
+++ b/css/widget/comment.css
@@ -467,6 +467,7 @@ a:hover {
 }
 #honey-comment .bluebox-style h4 {
   font-size: 18px;
+  color: #093d72;
 }
 #honey-comment .honey-comment-text {
   margin-top: 30px;
