--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -178,6 +178,7 @@
         background-color:#f3f8fe;
         h4{
             font-size:18px;
+            color:#093d72;
         }
     }
     .honey-comment-text {
