--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -2,10 +2,18 @@
 @import "../lib/css3.less";
 
 /**/
+body{font:12px/1.5 'Helvetica Neue',Helvetica,Arial,Sans-serif}
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td, iframe, .h10, .h20 {
     margin: 0;
     padding: 0;
 }
+a {
+    color: #093D72;
+}
+
+
+
+
 
 #honey-comment { 
     
