--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -10,9 +10,9 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 a {
     color: #093D72;
 }
-
-
-
+.fr{
+    float:right;
+}
 
 
 #honey-comment { 
