--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -13,7 +13,14 @@ a {
 .fr{
     float:right;
 }
-
+.clearfix:after {
+    clear: both;
+    content: " ";
+    display: block;
+    font-size: 0;
+    height: 0;
+    visibility: hidden;
+}
 
 #honey-comment { 
     
