--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -7,7 +7,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     margin: 0;
     padding: 0;
 }
-a {
+.article-summry h1 a {
     color: #093D72;
 }
 .fr{
