Signed-off-by: Dora <babyvox1990@vip.qq.com>

--- a/css/widget/comment.css
+++ b/css/widget/comment.css
@@ -65,6 +65,9 @@ iframe,
   margin-top: 20px;
   padding: 0 10px;
 }
+#honey-comment ul.honey-comment-list a {
+  color: #093D72;
+}
 #honey-comment ul.honey-comment-list li {
   border-bottom: 1px dotted #E1E1E1;
   overflow: hidden;
