--- a/less/widget/comment.less
+++ b/less/widget/comment.less
@@ -41,6 +41,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     ul.honey-comment-list {
         margin-top: 20px; 
         padding:0 10px;
+        a{color:#093D72;}
         li {
             border-bottom: 1px dotted #E1E1E1;
             overflow: hidden;
