--- a/less/honey.less
+++ b/less/honey.less
@@ -17,7 +17,7 @@ html {
     -ms-text-size-adjust: 100%;    
 }
 /* 内外边距通常让各个浏览器样式的表现位置不同 */
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td, iframe, .h10, .h20 {
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, button, textarea, p, blockquote, th, td, iframe, .h10, .h20 {
     margin: 0;
     padding: 0;
 }
